VAITP GUI/vaitp/vaitp_dataset/test/vulnerable/16.txt
"    def test_invalid_identitifer(self):        m = ast.Module([ast.Expr(ast.Name(42, ast.Load()))])        ast.fix_missing_locations(m)        with self.assertRaises(TypeError) as cm:            compile(m, "<test>", "exec")        self.assertIn("identifier must be of type str", str(cm.exception))"